# KakaoPI

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  client.c  client_lcd.c  server.c  soft_lcd.c  spi.c  실행방법.txt  코드구조.txt
pi1/: README.md  gpio.c  gpio.h  mypi.py  pwm.c  pwm.h  spi.h
pi2/: README.md
pi2/.cargo/: config.toml
pi2/src/: main.rs
pi2/src/routes/: mod.rs  util.rs
pi2/templates/: lcd.html
pi3/: README.md
src/: lib.rs
src/routes/: sensor.rs
