[package]
name = "pi_kakao"
version = "0.1.0"
edition = "2021"
authors = ["Seok Won <ikr@kakao.com>"]
description = "카카오파이: 카카오챗봇 서버"
license = "MIT"
readme = "README.md"

[dependencies]
actix-rt = "2"  # 웹 서버 열기
actix-http = "3"  # 웹 서버 열기
actix-web = "4"  # 웹 서버 열기
serde = { version = "1.0", features = ["derive"] }  # JSON
serde_json = "1.0"  # JSON
serde_derive = "1.0"  # JSON
kakao-rs = "0.3"  # 직접 만든 라이브러리
subprocess = "0.2"  # 서브프로세스 콜
async-std = "1.11.0"  # 비동기 스탠다드 라이브러리
futures = "0.3"  # 비동기 support

tera = "1.16.0"  # 웹 홈페이지 tera template
rust-embed="6.4.0"
mime_guess = { version = "2" }